# Auto-Sync-External-Volumes

./: Cargo.toml  config.yaml  index.html  package-lock.json  package.json  style.css
crates/FileSyncer/: bun.lockb  eslint.config.js  package.json
crates/FileSyncer/src/: App.tsx  main.tsx  style.css
crates/FileSyncer/src-tauri/: Cargo.toml  tauri.conf.json
crates/FileSyncer/src-tauri/src/: lib.rs  main.rs
crates/FileSyncer/src/context/: TaskDispatcher.ts
crates/FileSyncer/src/model/: Task.ts
crates/sync-backend/: Cargo.toml
crates/sync-backend/src/: lib.rs  main.rs  sync.rs
crates/volume-tracker/: Cargo.toml
crates/volume-tracker/src/: lib.rs  mem.rs  windows.rs
crates/volume-tracker/src/windows/: array.rs  mount_mgr.rs  wmi.rs
src/: main.rs
