[package]
name = "FileSyncer"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "^0.19"
sync-backend = { path = "crates/sync-backend" }

[workspace]
members = ["crates/volume-tracker", "crates/sync-backend"]

[workspace.dependencies]
log = "0.4"
tokio = { version = "1.39" }
flume = "0.11"
thiserror = "1.0.63"
serde = "1.0.209"
volume-tracker = { path = "crates/volume-tracker" }