[workspace]
resolver = "2"
members = ["crates/volume-tracker", "crates/sync-backend", "crates/FileSyncer/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Lynn Chen <emmalynnchenn@gmail.com>"]
description = "A File Syncer App that automatically triggers file sync when file systems are mounted."

[workspace.dependencies]
log = "0.4"
tokio = { version = "1.39" }
flume = "0.11"
thiserror = "1.0.63"
serde = "1.0.209"
file-syncer = { path = "crates/FileSyncer/src-tauri" }
sync-backend = { path = "crates/sync-backend" }
volume-tracker = { path = "crates/volume-tracker" }
